# vin

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  configreader.cpp  glad.c  main.cpp  messagebox.cpp  options.cpp  trim.cpp  vin.conf
include/: configreader.h  errorcode.h  filebuffer.h  font.h  fontface.h  frame.h  gap_buffer.h  gapbuffer.h  options.h  piecetable.h  rect.h  renderer.h  textengine.h  trim.h  util.h
include/glad/: glad.h
include/util/: vector.h
include/widgetframework/: widget.h
src/: configreader.cpp  filebuffer.cpp  font.cpp  fontface.cpp  frame.cpp  gapbuffer.cpp  main.cpp  messagebox.cpp  options.cpp  piecetable.cpp  renderer.cpp  textengine.cpp  util.cpp
src/widgetframework/: widget.cpp
